Adds avatars to user with Paperclip, Figaro, & AWS-S3. Fixes bug favoritecitylinks destroy method.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,16 +2,20 @@
 #
 # Table name: users
 #
-#  id              :integer          not null, primary key
-#  user_name       :string(255)      not null
-#  email           :string(255)      not null
-#  password_digest :string(255)      not null
-#  bio             :string(140)      not null
-#  session_token   :string(255)      not null
-#  activated       :boolean          default(FALSE)
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#  home_city_id    :integer          not null
+#  id                  :integer          not null, primary key
+#  user_name           :string(255)      not null
+#  email               :string(255)      not null
+#  password_digest     :string(255)      not null
+#  bio                 :string(140)
+#  session_token       :string(255)      not null
+#  activated           :boolean          default(FALSE)
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#  home_city_id        :integer          not null
+#  avatar_file_name    :string(255)
+#  avatar_content_type :string(255)
+#  avatar_file_size    :integer
+#  avatar_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
