--- a/test/fixtures/photo_taggings.yml
+++ b/test/fixtures/photo_taggings.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: photo_taggings
+#
+#  id         :integer          not null, primary key
+#  photo_id   :integer          not null
+#  tag_id     :integer          not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 # This model initially had no columns defined.  If you add columns to the
