Updates models and associations to replace references to City with references to ZipCode

--- a/test/fixtures/favorite_zip_code_links.yml
+++ b/test/fixtures/favorite_zip_code_links.yml
@@ -1,13 +1,12 @@
 # == Schema Information
 #
-# Table name: weather_reports
+# Table name: favorite_zip_code_links
 #
-#  id                   :integer          not null, primary key
-#  temperature          :integer          not null
-#  weather_condition_id :integer          not null
-#  created_at           :datetime         not null
-#  updated_at           :datetime         not null
-#  zip_code_id          :integer
+#  id          :integer          not null, primary key
+#  user_id     :integer          not null
+#  zip_code_id :integer          not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
