--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -5,13 +5,13 @@
 #  id                 :integer          not null, primary key
 #  caption            :string(255)
 #  submitter_id       :integer          not null
-#  city_id            :integer
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
 #  image_file_name    :string(255)
 #  image_content_type :string(255)
 #  image_file_size    :integer
 #  image_updated_at   :datetime
+#  zip_code_id        :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
